extra-app-deploy/v2ray-wss-proxy/conf/v2ray.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-v2ray
  namespace: share-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.d7z.net
      secretName: tls-d7z-net
  rules:
    - host: api.d7z.net
      http:
        paths:
          - path: /api/info
            pathType: Prefix
            backend:
              service:
                name: svc-v2ray
                port:
                  name: v2ray
